--- a/tox.ini
+++ b/tox.ini
@@ -104,18 +104,19 @@ description = Install as Source Distribution & Test
 
 # Build WHEEL via PIP
 # Note: this can be run tox -e wheel which make a match as testenv we run it as tox -e test to match 
-[wheel_env] # Note: this will not inherit from testenv since it is not testXXX
+[wheel_env] # Note: this will not inherit from testenv since it is not testenv:** from env_list section
 setenv =
     {[testenv]setenv} 
     _WHEEL_DIR = {env:BUILD_DEST:{toxworkdir}{/}{env:DIST_DIR}}
 
+# see https://pip.pypa.io/en/stable/cli/pip_wheel/
 [testenv:{py313-, py312-, py311-, py310-, py39-, py38-, py37-, py36-, pypy3-, }wheel{, -linux, -macos, -windows}]
 description = Build Wheel, via pip
 basepython = {env:TOXPYTHON:python312}
-setenv = {[wheel_env]setenv} # Note: _WHEEL_DIR is missing the value for "{env:DIST_DIR}" 
+#setenv = {[wheel_env]setenv} # Note: _WHEEL_DIR is missing the value for "{env:DIST_DIR}" ; call not working
 skip_install = true
 changedir = {toxinidir}
-# Note: No need for "env:BUILD_DEST" since it is empty or has no value or null 
+# Note:  "env:BUILD_DEST" is empty or null but it is good in case you want to add parent directory for .tox directory 
 commands = pip wheel --wheel-dir {env:BUILD_DEST:{toxworkdir}{/}{env:DIST_DIR}} {toxinidir}
 
 # Install WHEEL and TEST
@@ -128,7 +129,7 @@ setenv =
 skip_install = true
 changedir = {toxinidir}
 commands_pre =
-    pip install --exists-action w --force-reinstall "{env:_WHEEL_DIR}{/}{env:_WHEEL}[test]"
+    pip install --exists-action w --force-reinstall "{env:_WHEEL_DIR}{/}{env:_WHEEL}[test]"s
 
 
 # PATH
@@ -139,8 +140,10 @@ setenv =
     PYTHONPATH = {toxinidir}{/}src{:}{toxinidir}{/}tests
 deps = poetry
 skip_install = true
+commands_pre = poetry lock # prevents you from automatically getting the latest versions of your dependencies
 commands =
-    poetry install --no-root -E test
+   # poetry install --no-root -E test -v
+    poetry install --no-root
     {[testenv]commands}
 
 # LOCAL DEVELOPMENT
@@ -188,6 +191,8 @@ skip_install = true
 deps =
     poetry
     poetry-plugin-export
+    
+pre_commands = poetry lock 
 commands =
     python -m poetry export -f requirements.txt -o {env:REQS_FILE:{env:DEFAULT_REQS_FILE}} {posargs}
     python -c 'print( "\n  Generated requirements file: " + "{env:REQS_FILE:{env:DEFAULT_REQS_FILE}}" );'
