--- a/pyproject.toml
+++ b/pyproject.toml
@@ -129,6 +129,8 @@ ignore_errors = true
 [tool.poetry.scripts]
  cli = 'dmcview.cli:main'
 
+#[tool.poetry.extras] see https://realpython.com/dependency-management-python-poetry/
+ 
 
 ##########
 # TOOLS
