--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -33,13 +33,15 @@ env:
   UBUNTU_PY310_STRATEGY: "{\"platform\":[\"ubuntu-latest\"], \"python-version\":[\"3.12\"]}"
   TEST_STRATEGY: "{\"platform\":[\"ubuntu-latest\", \"macos-latest\", \"windows-latest\"], \"python-version\":[\"3.12\"]}"
 
+  #########################################################
   ##### JOB ON/OFF SWITCHES - Top/1st level overrides #####
-  RUN_UNIT_TESTS: "true"
-  RUN_LINT_CHECKS: "true"
-  DOCKER_JOB_ON: "true"
-  PUBLISH_ON_PYPI: "true"
-  DOCS_ON: "true"
-  DRAW_DEPENDENCIES: "true"
+  #########################################################
+  RUN_UNIT_TESTS: "false" # Note: we make it off for now so we set the value to false 
+  RUN_LINT_CHECKS: "false" # ditto 
+  DOCKER_JOB_ON: "false" # ditto 
+  PUBLISH_ON_PYPI: "false" # ditto 
+  DOCS_ON: "false" # ditto
+  DRAW_DEPENDENCIES: "false" # ditto 
   ###############################
 
   ### DOCKER Job Policy ####
