--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -16,6 +16,7 @@ build:
     pre_install:
       - python --version
       - python -m pip install poetry
+      - python -m poetry self add poetry-plugin-export
       - python -m poetry export -o reqs.txt -E docs --without-hashes
     post_install:
       - python -m pip install -e .
