--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -17,7 +17,7 @@ build:
       - python --version
       - python -m pip install poetry
       - python -m poetry self add poetry-plugin-export
-      - python -m poetry export -o reqs.txt -E docs --without-hashes
+      - python -m poetry export -o req-docs.txt -E docs
     post_install:
       - python -m pip install -e .
       - python -m pip install pyyaml
