--- a/pyproject.toml
+++ b/pyproject.toml
@@ -125,9 +125,10 @@ module =["PySide6.*"]
 ignore_errors = true
 #disable_error_code = ["syntax"]
 
-
-[tool.poetry.scripts]
- cli = 'dmcview.cli:main'
+#https://python-poetry.org/docs/pyproject/#scripts
+# we will have the dmcview script installed which will execute the main function in the console module in the dmcview package.
+[project.scripts]
+dmcview = 'dmcview:main'
 
 [tool.poetry.extras] #see https://realpython.com/dependency-management-python-poetry/
  docs = ["sphinx", "sphinx-rtd-theme", "sphinx-notfound-page", "sphinxcontrib-spelling"]
