--- a/pyproject.toml
+++ b/pyproject.toml
@@ -128,7 +128,7 @@ ignore_errors = true
 #https://python-poetry.org/docs/pyproject/#scripts
 # we will have the dmcview script installed which will execute the main function in the console module in the dmcview package.
 [project.scripts]
-dmcview = 'dmcview:main'
+dmcview = 'dmcview.cli:main'
 
 [tool.poetry.extras] #see https://realpython.com/dependency-management-python-poetry/
  docs = ["sphinx", "sphinx-rtd-theme", "sphinx-notfound-page", "sphinxcontrib-spelling"]
