--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,10 @@
+
+# BUILD
+# Poetry https://python-poetry.org/docs/pyproject/
+[build-system]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
+build-backend = "poetry.core.masonry.api"
+
 [project]
 name = "dmc-view"
 version = "0.3.1"
@@ -14,6 +21,8 @@ documentation = "https://dmc-view.readthedocs.io/"
 keywords = [
     "digital Magnatic view", "dmc",
 ]
+
+requires-python = ">=3.8"
 
 # Troves classifer see https://pypi.org/classifiers/
 classifiers = [
@@ -35,18 +44,37 @@ classifiers = [
     "Topic :: Desktop Environment",
 ]
 
-############
-## Poetry ##
-############
-# BUILD
-# Poetry see https://python-poetry.org/docs/pyproject/
-[build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
+
+# PyPi url links, that appear in 'Project Links' section
+urls."Bug Tracker" = "https://github.com/Issamricin/dmc-view/issues"
+urls."CI: Github Actions" = "https://github.com/Issamricin/dmc-view/actions"
+urls.Documentation = "https://dmc-view.readthedocs.io/"
+urls."Source Code" = "https://github.com/Issamricin/dmc-view"
+urls.Changelog = "https://github.com/Issamricin/dmc-view/blob/master/CHANGELOG.rst"
+urls."Code of Conduct" = "https://github.com/Issamricin/dmc-view/blob/master/CONTRIBUTING.md"
+
+
+
+
+### Dependency Constraints, aka Requirements ###
+dependencies = [
+  "pyside6>=6.6.1",
+  "matplotlib>=3.10.1",
+]
+
+## optional dependency for test or other purpose 
+## Install in edit mode with the test dependencies 
+## $ pip install -e .  dmc-view[test]
+[project.optional-dependencies]
+test = [
+  "pytest>=8.0.0",
+  "pytest-qt>=4.4.0",
+  "pytest-mock>=3.14",
+  "pytest-cov>4.1.0",
+]
 
 
 # Information required for building (sdist/wheel)
-## Also renders on pypi as 'subtitle'
 [tool.poetry]
 packages = [
     { include = "dmcview", from = "src" },
@@ -81,36 +109,7 @@ exclude = [
     ".travis.yml"
 ]
 
-# PyPi url links, that appear in 'Project Links' section
-[tool.poetry.urls]
-"Bug Tracker" = "https://github.com/Issamricin/dmc-view/issues"
-"CI: Github Actions" = "https://github.com/Issamricin/dmc-view/actions"
-"Documentation" = "https://dmc-view.readthedocs.io/"
-"Source Code" = "https://github.com/Issamricin/dmc-view"
-"Changelog" = "https://github.com/Issamricin/dmc-view/blob/master/CHANGELOG.rst"
-"Code of Conduct" = "https://github.com/Issamricin/dmc-view/blob/master/CONTRIBUTING.md"
 
-
-
-
-### Dependency Constraints, aka Requirements ###
-[tool.poetry.dependencies]
-python = ">=3.10,<=3.13"
-pyside6= ">=6.6.1"
-matplotlib= ">=3.10.1"
-
-
-
-
-# Test: packages imported in test code and packages required for the "test runner"
-pytest = { version = "^8.0.0", optional = true }
-pytest-cov = { version = "^4.1.0", optional = true }
-pytest-explicit = { version = "^1.0.1", optional = true }
-pytest-xdist = { version = "^3.5.0", optional = true }
-pytest-qt = {version="4.4.0", optional =true}
-
-# Type Checking
-mypy = { version = "^1.8.0", optional = true }
 
 # Docs: dev and build dependencies
 sphinx = { version = ">=8.1.3", optional = true }
@@ -121,14 +120,7 @@ sphinx-autobuild = { version = "^2024.10.3", optional = true }
 sphinx-inline-tabs = { version = "^2023.4.21", optional = true, python = ">=3.8,<3.13" }
 sphinxcontrib-mermaid = { version = "^1.0.0", optional = true, python = ">=3.7,<3.13" }
 
-### mypy config 
-# see https://mypy.readthedocs.io/en/stable/config_file.html
-### see https://stackoverflow.com/questions/72345536/how-to-avoid-mypy-checking-explicitly-excluded-but-imported-modules-without-ma
-### see https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml-file
-[[tool.mypy.overrides]]
-module =["PySide6.*"]
-ignore_errors = true
-#disable_error_code = ["syntax"]
+
 
 #https://python-poetry.org/docs/pyproject/#scripts
 # we will have the dmcview script installed which will execute the main function in the console module in the dmcview package.
@@ -142,25 +134,6 @@ dmcview = 'dmcview.cli:main'
 ##########
 # TOOLS
 ##########
-
-# see  https://docs.pytest.org/en/stable/reference/customize.html (pyproject.toml)
-# QT fixutre see https://pytest-qt.readthedocs.io/en/latest/intro.html
-[tool.pytest.ini_options]
-minversion = "6.2"
-qt_api="pyqt5"
-addopts = "--strict-markers"
-markers = [
-    "slow: Marks a slow test",
-    "integration: Integration Tests",
-    "network_bound: Require internet connection",
-]
-testpaths = [
-    "tests",
-]
-explicit-only = [
-    "integration",
-    "network_bound",
-]
 
 # see https://black.readthedocs.io/en/stable/  code format with max line 95
 [tool.black]
