--- a/tox.ini
+++ b/tox.ini
@@ -78,7 +78,7 @@ commands =
     pytest -ra --cov --cov-report=term-missing \
       --cov-report=html:{envdir}/htmlcov --cov-context=test \
       --cov-report=xml:{toxworkdir}/coverage.{envname}.xml \
-      {posargs:-n auto} tests
+      {posargs} tests
 
 
 #######################
@@ -285,7 +285,7 @@ depends = build # This is solely meant to specify dependencies and order in betw
 
 
 #############
-## DEPLOYMENT  --Alan Pending now 
+## DEPLOYMENT  NOTE NEEDED for NOW 
 #############
 [testenv:deploy]
 # Deploy to test.pypi.org : TWINE_USERNAME=user TWINE_PASSWROD=pass PACKAGE_DIST_VERSION=1.0.0 tox -e deploy
@@ -511,7 +511,7 @@ commands =
 
 
 
-# Note: Error fix it Alan
+# Note: for window you need to replace the "bin" with "SCripts" in the commands section
 [testenv:dev-env]
 description = Generate a virtual environment for local development
 basepython = {env:TOXPYTHON:python312}
@@ -532,6 +532,5 @@ commands =
     {env:_VIRT_ENV}{/}bin{/}pip install -e .[test,typing,docs]
     {env:_VIRT_ENV}{/}bin{/}pip freeze
 commands_post =
-    python -c 'import os; print("\n  Virtual environment created at: " + os.path.abspath("{env:_VIRT_ENV}") + "\n")'
-    # print the command for user to next axtivate the env
+    python -c 'import os; print("\n  Virtual environment created at: " + os.path.abspath("{env:_VIRT_ENV}"))'
     python -c 'import os; print("  To activate the environment, run: source " + os.path.abspath("{env:_VIRT_ENV}") + "{/}bin{/}activate")'
