--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -1,5 +1,5 @@
 # https://github.com/actions/stale
-name: close stale issues
+name: Close Stale Issues
 on:
   schedule:
     - cron: "30 1 10 * *" # Minute [0,59] Hour [0,23] Day of the month [1,31]  Month of the year [1,12] Day of the week ([0,6] with 0=Sunday)
