--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -29,13 +29,14 @@ env:
   ### STRESS TEST Job MATRIX ###
   FULL_MATRIX_STRATEGY: "{\"platform\": [\"ubuntu-latest\", \"macos-latest\", \"windows-latest\"], \"python-version\": [\"3.8\", \"3.9\", \"3.10\", \"3.11\", \"3.12\", \"3.13\"]}"
   # Python 3.12 is in bugfix mode, same as 3.11 -> can start supporting 3.13 later 
-  UBUNTU_PY312_STRATEGY: "{\"platform\":[\"ubuntu-latest\"], \"python-version\":[\"3.12\"]}"
-  TEST_STRATEGY: "{\"platform\":[\"ubuntu-latest\", \"macos-latest\", \"windows-latest\"], \"python-version\":[\"3.12\"]}"
+  UBUNTU_PY313_STRATEGY: "{\"platform\":[\"ubuntu-latest\"], \"python-version\":[\"3.13\"]}"
+  # Below is not used but in case you later want special test strategy to be run 
+  TEST_STRATEGY: "{\"platform\":[\"ubuntu-latest\", \"macos-latest\", \"windows-latest\"], \"python-version\":[\"3.13\"]}"
 
   #########################################################
   ##### JOB ON/OFF SWITCHES - Top/1st level overrides #####
   #########################################################
-  RUN_UNIT_TESTS: "false" # Note: we make it off for now so we set the value to false 
+  RUN_UNIT_TESTS: "true" # Note: we make it off for when we set it value to false 
   RUN_LINT_CHECKS: "false" # ditto 
   DOCKER_JOB_ON: "false" # ditto 
   PUBLISH_ON_PYPI: "false" # ditto 
@@ -92,7 +93,7 @@ jobs:
           if [[ $BRANCH_NAME == "stress-test" || $GITHUB_REF == refs/tags/* ]]; then
             echo "matrix=$FULL_MATRIX_STRATEGY" >> $GITHUB_OUTPUT
           else
-            echo "matrix=$UBUNTU_PY312_STRATEGY" >> $GITHUB_OUTPUT
+            echo "matrix=$UBUNTU_PY313_STRATEGY" >> $GITHUB_OUTPUT
           fi
           echo "TESTS_ENABLED=$RUN_UNIT_TESTS" >> $GITHUB_OUTPUT
           echo "PUBLISH_ON_PYPI=$PUBLISH_ON_PYPI" >> $GITHUB_OUTPUT
@@ -144,7 +145,7 @@ jobs:
     steps:
       - run: echo "Platform -> ${{ matrix.platform }} , Python -> ${{ matrix.python-version }}"
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5.3.0
+        uses: actions/setup-python@v5.6.0
         with:
           python-version: ${{ matrix.python-version }}
       - run: python -m pip install --upgrade pip && python -m pip install tox==3.28 tox-gh-actions
@@ -410,5 +411,5 @@ jobs:
       tag: ${{ github.ref_name }}
       draft: ${{ needs.check_which_git_branch_we_are_on.outputs.ENVIRONMENT_NAME == 'TEST_DEPLOYMENT' }}
     secrets:
-      # passing the GH_TOKEN PAT, to render in GH as ie: 'boromir674 released this yesterday', instead of 'github-actions released this yesterday'
+      # passing the GH_TOKEN 
       gh_token: ${{ secrets.GH_TOKEN }}
