--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ classifiers = [
     "Operating System :: POSIX :: Linux",
     "Operating System :: MacOS",
     "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: 3.8",
+     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
@@ -56,10 +56,13 @@ urls."Code of Conduct" = "https://github.com/Issamricin/dmc-view/blob/master/CON
 
 
 
+
 ### Dependency Constraints, aka Requirements ###
+# see https://python-poetry.org/docs/dependency-specification/#multiple-constraints-project
 dependencies = [
-  "pyside6>=6.6.1",
-  "matplotlib>=3.10.1",
+  "pyside6 (>=6.6.1) ; python_version >= '3.8' and python_version <= '3.12'",
+  "pyside6 (<=6.9.1) ; python_version >= '3.9' and python_version <= '3.13'",
+  "matplotlib (>=3.10.1); python_version>='3.10' and python_version <='3.13'" # see https://github.com/matplotlib/matplotlib/blob/v3.10.1/pyproject.toml
 ]
 
 ## optional dependency for test or other purpose 
@@ -109,9 +112,8 @@ exclude = [
     ".travis.yml"
 ]
 
-
-
 # Docs: dev and build dependencies
+[tool.poetry.dependencies]
 sphinx = { version = ">=8.1.3", optional = true }
 sphinx-autodoc-typehints = { version = ">= 2.5.0", optional = true }
 sphinx-rtd-theme = { version = ">= 3.0.1", optional = true }
@@ -120,15 +122,15 @@ sphinx-autobuild = { version = "^2024.10.3", optional = true }
 sphinx-inline-tabs = { version = "^2023.4.21", optional = true, python = ">=3.8,<3.13" }
 sphinxcontrib-mermaid = { version = "^1.0.0", optional = true, python = ">=3.7,<3.13" }
 
+[tool.poetry.extras] #see https://realpython.com/dependency-management-python-poetry/
+docs = ["Sphinx", "sphinx-autodoc-typehint", "sphinx-rtd-theme", "sphinxcontrib-spelling", "sphinx-autobuild", "sphinx-inline-tabs", "sphinxcontrib-mermaid"]
+
 
 
 #https://python-poetry.org/docs/pyproject/#scripts
 # we will have the dmcview script installed which will execute the main function in the console module in the dmcview package.
 [project.scripts]
 dmcview = 'dmcview.cli:main'
-
-[tool.poetry.extras] #see https://realpython.com/dependency-management-python-poetry/
- docs = ["sphinx", "sphinx-rtd-theme", "sphinx-notfound-page", "sphinxcontrib-spelling"]
  
 
 ##########
