--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,8 +60,8 @@ urls."Code of Conduct" = "https://github.com/Issamricin/dmc-view/blob/master/CON
 ### Dependency Constraints, aka Requirements ###
 # see https://python-poetry.org/docs/dependency-specification/#multiple-constraints-project
 dependencies = [
-  "pyside6 (>=6.6.1) ; python_version >= '3.8' and python_version <= '3.12'",
-  "pyside6 (<=6.9.1) ; python_version >= '3.9' and python_version <= '3.13'",
+  "pyside6 (>=6.6.1); python_version >= '3.8' and python_version <= '3.12'",
+  "pyside6 (<=6.9.1); python_version >= '3.9' and python_version <= '3.13'",
   "matplotlib (>=3.10.1); python_version>='3.10' and python_version <='3.13'" # see https://github.com/matplotlib/matplotlib/blob/v3.10.1/pyproject.toml
 ]
 
@@ -70,10 +70,10 @@ dependencies = [
 ## $ pip install -e .  dmc-view[test]
 [project.optional-dependencies]
 test = [
-  "pytest>=8.4.0",
-  "pytest-qt>=4.5.0",
-  "pytest-mock>=3.14.0",
-  "pytest-cov>6.2.0",
+  "pytest (>=8.4.0); python_version >='3.9' and python_version <='3.14'",
+  "pytest-qt (>=4.5.0); python_version >='3.9' and python_version <='3.13'",
+  "pytest-mock (>=3.14.0); python_version >='3.9' and python_version <='3.14'",
+  "pytest-cov (>6.2.0); python_version >='3.9' and python_version <='3.12'"
 ]
 
 
